--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "dist/public/**"
+          "dist/public/**",
+          "vite.config.ts" 
         ]
       }
     }
